<resources>
    <string name="app_name">Hunger</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Manager">MANAGER</string>
    <string name="loginUser">USER</string>
    <string name="loginPW">PASSWORD</string>
    <string name="orders">ORDERS</string>
    <string name="products">PRODUCTS</string>
    <string name="choose_table">Choose Table</string>
    <string name="save">Save</string>
    <string name="product_sort">SORT</string>
    <string name="product_color">COLOR</string>
    <string name="add_product">Add Product</string>
    <string name="add_order">ADD ORDER</string>
    <string name="turnovers">TURNOVERS</string>
    <string name="btnLogin">LOG IN</string>
    <string name="version">VERSION 1.0.0</string>
    <string name="copyRight">Copyright © 2015 BenGo Inc.</string>
    <string name="allRights">All rights reserved</string>
    <string name="email">contact@bengo.com</string>
    <string name="today">TODAY</string>
    <string name="soldToday">1 000.- CHF</string>
    <string name="soldMonth">10 000.- CHF</string>
    <string name="soldYear">100 000.- CHF</string>
    <string name="month">MONTH</string>
    <string name="year">YEAR</string>
    <string name="title_activity_menu">menu</string>
    <string name="action_info">About</string>
    <string name="login_failure">Password wrong or user doesn\'t exist</string>
    <string name="logout">Logout</string>
    <string name="user_management">User Management</string>
    <string name="title_activity_user_management">User Management</string>
    <string name="add_user">Add User</string>
    <string name="title_activity_user_add">Add User</string>
    <string name="title_activity_user_modify">Modify User</string>
    <string name="title_activity_user_delete">Delete user</string>
    <string name="cant_delete_logged_in_user">Sorry, you can\'t delete an active user</string>
    <string name="cant_modify_logged_in_user">Sorry, you can\'t modify an active user</string>
    <string name="is_admin">Admin?</string>
    <string name="product_category0">Menu</string>
    <string name="product_category1">Dessert</string>
    <string name="product_category2">Drink</string>
    <string name="product_category3">Drink (alc)</string>
    <string name="product_category4">Simple Product</string>
    <string name="products_view">Product Overview</string>
    <string name="title_activity_product_add">Add Product</string>
    <string name="title_activity_product_modify">Modify Product</string>
    <string name="title_activity_product_delete">Delete Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="title_activity_order_add">Add Order</string>
    <string name="title_activity_order_modify">Modify Order</string>
    <string name="title_activity_order_delete">Delete Order</string>
    <string name="selected_table">Selected Table: </string>
    <string name="product_added">Product added</string>
    <string name="order_management">Order Mangement</string>
    <string name="order_view_table">Table: </string>
    <string name="currency">CHF</string>
    <string name="turnovers_title">Turnovers</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_select_language">Select your language</string>
    <string name="pref_summary">Define your preferred language</string>
    <string name="main_welcome">Willkommen</string>
</resources>
