<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:background="@color/backGround">
    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/btnOrders"
        android:background="@color/buttons"
        android:hint="@string/orders"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/buttonsText"
        android:layout_marginTop="40dp"
        android:onClick="goToOrders"
        android:layout_gravity="center"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/btnProducts"
        android:background="@color/buttons"
        android:hint="@string/products"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:onClick="goToProducts"
        android:layout_gravity="center"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/btnDollar"
        android:background="@color/buttons"
        android:hint="@string/turnovers"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:onClick="goToTurnovers"
        android:layout_gravity="center"/>
</LinearLayout>