<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:id="@+id/tv_name"
            android:text="@string/product_name"
            android:textSize="35dp"
            android:textStyle="bold"
            android:textColor="@color/text_newProduct"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:id="@+id/tv_sort"
            android:text="@string/product_sort"
            android:textSize="35dp"
            android:textStyle="bold"
            android:textColor="@color/text_newProduct"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:id="@+id/tv_price"
            android:text="@string/product_price"
            android:textSize="35dp"
            android:textStyle="bold"
            android:textColor="@color/text_newProduct"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:id="@+id/tv_color"
            android:text="@string/product_color"
            android:textSize="35dp"
            android:textStyle="bold"
            android:textColor="@color/text_newProduct"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save_button"
        android:background="@color/buttons"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:layout_gravity="center_horizontal"
        android:textSize="35dp"
        android:textStyle="bold"/>

</LinearLayout>