<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:label="LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="80dp"
    android:weightSum="3"
    android:background="@color/backGround">

    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:id="@+id/editTxtUser"
        android:background="@color/buttons"
        android:layout_marginLeft="40dp"
        android:hint="@string/loginUser"
        android:textSize="40sp"
        android:textStyle="normal"
        android:ellipsize="start"
        android:gravity="center"
        android:textColor="@color/buttonsText"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:id="@+id/editTxtPW"
        android:background="@color/buttons"
        android:layout_marginLeft="40dp"
        android:hint="@string/loginPW"
        android:textSize="40sp"
        android:textStyle="normal"
        android:ellipsize="start"
        android:gravity="center"
        android:textColor="@color/buttonsText"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        />

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/button_circle"
        android:text="@string/btnLogin"
        android:textColor="@color/buttonsText"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:ellipsize="start"
        android:gravity="center"
        android:id="@+id/loginBTN"
        android:onClick="goToMenuOrOrders"/>

</LinearLayout>
