<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/text_color"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/can_today"
                android:background="@color/buttons"
                android:padding="5dp"
                android:minWidth="200dp"
                android:gravity="center"
                android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/text_color"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/can_month"
                android:background="@color/buttons"
                android:padding="5dp"
                android:minWidth="200dp"
                android:gravity="center"
                android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/text_color"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/can_year"
                android:background="@color/buttons"
                android:minWidth="200dp"
                android:padding="5dp"
                android:gravity="center"
                android:textSize="20dp"/>
        </LinearLayout>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listview_turnovers"
        android:layout_marginTop="10dp"
        android:scrollbars="horizontal" />
</LinearLayout>