<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:label="LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:orientation="vertical"
    android:weightSum="3"
    android:background="@color/backGround">

    <!--
    This listview will be created with a custom adapter
    -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/choose_table"
        android:id="@+id/textView"
        android:paddingLeft="130dp"
        android:textStyle="bold"
        android:textColor="@color/buttonsText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingLeft="20dp"
        android:paddingBottom="5dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_marginRight="5dp"
            android:background="@color/buttons"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="1"
            android:textSize="20dp"
            android:id="@+id/button2" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_marginRight="5dp"
            android:background="@color/buttons"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="2"
            android:textSize="20dp"
            android:id="@+id/button3" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_marginRight="5dp"
            android:background="@color/buttons"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="3"
            android:textSize="20dp"
            android:id="@+id/button4" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_marginRight="5dp"
            android:background="@color/buttons"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="4"
            android:textSize="20dp"
            android:id="@+id/button5" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"
            android:paddingBottom="20dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_marginRight="5dp"
            android:background="@color/buttons"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="5"
            android:textSize="20dp"
            android:id="@+id/button6" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_marginRight="5dp"
            android:background="@color/buttons"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="6"
            android:textSize="20dp"
            android:id="@+id/button7" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_marginRight="5dp"
            android:background="@color/buttons"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="7"
            android:textSize="20dp"
            android:id="@+id/button8" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_marginRight="5dp"
            android:background="@color/buttons"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="8"
            android:textSize="20dp"
            android:id="@+id/button9" />
    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        android:id="@+id/button"
        android:background="@color/buttons"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_gravity="center_horizontal" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="252dp"
        android:id="@+id/listViewOrders"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save_button"
        android:background="@color/buttons"
        android:textStyle="bold"
        android:padding="5dp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
